[tool.poetry]
name = "morpho.py"
version = "0.0.4"
description = ""
license = "MIT"
authors = ["Tiago Vilela <tiagovla@gmail.com>"]

packages = [
    {include = "morpho", from="."}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.1"
scipy = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"
matplotlib = "^3.4.1"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

